#8 Add Exchange resources feature
